import 'dart:typed_data';

enum DeliverableType {
  post,
  mention,
  video,
  custom,
}


class DeliverableIcon
{
   final DeliverableType deliverableType;
   final Uint8List iconData;
   final String name;

  DeliverableIcon({this.deliverableType, this.iconData,this.name, });
}


class Deliverable {
  final int id;
  final DeliverableType type;
 final String description;

  Deliverable({this.id, this.type, this.description});
}
