import 'dart:typed_data';

import 'package:meta/meta.dart';

class SocialNetworkProvider {
  final int id;
  final bool canAuthorizeUser;
  final bool canBeUsedAsFilter;
  final String name;
  final Uint8List logoColoredData;
  final Uint8List logoMonochromeData;
  final int logoBackGroundColor;
  final Uint8List logoBackgroundData;

  SocialNetworkProvider({
    this.logoBackgroundData,
    this.logoMonochromeData,
    this.logoBackGroundColor,
    @required this.id,
    @required this.canAuthorizeUser,
    @required this.canBeUsedAsFilter,
    @required this.name,
    this.logoColoredData,
  });
}
